# clarity-cx

./: .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  ROADMAP.md  SPEC_DEV.md  SUBMISSION_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt
data/sample_transcripts/: demo_transcript.txt  samples.json
docs/: ARCHITECTURE.md  CODE_WALKTHROUGH.md  DEPLOYMENT.md  QUICKSTART.md  presentation.html
scripts/: generate_audio.py  run_evals.py  seed_database.py
src/: __init__.py  config.py  database.py  evals.py  observability.py
src/agents/: __init__.py  base_agent.py  intake_agent.py  quality_score_agent.py  routing_agent.py  summarization_agent.py  transcription_agent.py
src/api/: main.py
src/eval/: dataset_loader.py
src/llm/: __init__.py  adapter.py
src/mcp/: __init__.py
src/mcp/tools/: __init__.py  analysis_tools.py  qa_tools.py
src/orchestration/: __init__.py  graph.py  nodes.py  state.py
src/ui/: app.py
tests/: test_clarity.py
